# gdrive

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Caddyfile  README.md  cli  clidev  fnox.toml  main.py  pyproject.toml
gdrive/: Dockerfile  __main__.py
gdrive/tests/: test_credentials_parse.py  test_server_request.py
nodejs/: Dockerfile  main.js  package-lock.json  package.json  token-server-adapter.js
python/: Dockerfile  main.py  pyproject.toml  test_token_server.py  token_server_adapter.py
python/tests/: test_credentials_parse.py  test_server_request.py  test_token_refresh.py  test_token_server.py
web/: index.html  privacy.html  style.css  terms.html
