[project]
name = "gdrive"
version = "0.1.0"
description = "CLI tool for Google Drive file operations"
requires-python = ">=3.14"
dependencies = [
    "asyncer>=0.0.8",
    "google-api-python-client>=2.187.0",
    "google-auth-oauthlib>=1.2.3",
    "pydantic>=2.0.0",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.7",
]

[project.scripts]
gdrive = "gdrive.__main__:main"
